Revise Spoken English page layout and content
Updated the title, meta description, and added Google Fonts. Enhanced the layout and content structure for the Spoken English classes page.

--- a/Spoken-English.html
+++ b/Spoken-English.html
@@ -2,57 +2,228 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Spoken English – Academic Link Institute</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <title>Spoken English Classes | Academic Link Raja Park Jaipur</title>
+  <meta name="description" content="Join Spoken English classes at Academic Link. Online sessions with personalised attention for students, homemakers, and professionals.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #ffffff;
+      color: #222;
+    }
+
+    /* NAVBAR */
+    header {
+      background: #0A1D37;
+      padding: 10px 40px;
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .logo img {
+      height: 45px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 22px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 14px;
+    }
+
+    nav ul li a:hover {
+      color: #f4b41a;
+    }
+
+    /* PAGE */
+    .page {
+      padding: 60px 40px;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    .page h1 {
+      color: #0A1D37;
+      font-size: 34px;
+      margin-bottom: 15px;
+    }
+
+    .page p {
+      font-size: 15px;
+      line-height: 1.7;
+      margin-bottom: 35px;
+    }
+
+    /* COURSE DETAILS */
+    .details-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+    }
+
+    .detail-box {
+      border: 1px solid #e2e6ea;
+      padding: 25px;
+      border-radius: 6px;
+    }
+
+    .detail-box h2 {
+      font-size: 20px;
+      color: #0A1D37;
+      margin-bottom: 10px;
+    }
+
+    .detail-box ul {
+      padding-left: 18px;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+
+    /* FEE HIGHLIGHT */
+    .fee-box {
+      background: #f7f9fc;
+      padding: 30px;
+      margin-top: 50px;
+      border-radius: 6px;
+      text-align: center;
+    }
+
+    .fee-box h2 {
+      color: #0A1D37;
+      margin-bottom: 10px;
+    }
+
+    .fee-box p {
+      font-size: 15px;
+    }
+
+    /* CTA */
+    .cta {
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    .cta a {
+      display: inline-block;
+      padding: 12px 30px;
+      background: #0A1D37;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
+    /* FOOTER */
+    footer {
+      background: #0A1D37;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+    }
+
+    /* MOBILE */
+    @media(max-width: 768px) {
+      nav ul {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 12px;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
-  <div class="navbar">
-    <div class="brand">
-      <img src="IMG_20251223_194332.jpg" alt="Academic Link Institute logo">
-      <h1>Academic Link Institute</h1>
+  <nav>
+    <div class="logo">
+      <img src="logo.png" alt="Academic Link">
     </div>
-    <nav class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="classes-fees.html">Classes & Fees</a>
-      <a href="spoken-english.html">Spoken English</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="courses.html">Courses</a></li>
+      <li><a href="fees.html">Fees</a></li>
+      <li><a href="spoken.html">Spoken English</a></li>
+      <li><a href="testimonials.html">Testimonials</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
-<section class="container">
-  <h2 class="section-title">Online Spoken English – 3‑Month Course</h2>
-  <p class="lead">This course is designed for school students, homemakers and working professionals who want to speak English confidently in real‑life situations.</p>
-  <p class="lead"><strong>Hindi medium students are welcome – Hindi se English tak step‑by‑step guidance.</strong></p>
+<section class="page">
+  <h1>Spoken English Classes</h1>
+  <p>
+    Academic Link offers interactive Spoken English classes designed to help
+    learners speak confidently and fluently in daily life and professional
+    situations. The course focuses on practical usage with personalised attention.
+  </p>
 
-  <div class="grid" style="margin-top:20px;">
-    <div class="card">
-      <h3>What You Learn</h3>
-      <p>• Everyday vocabulary and sentence making.</p>
-      <p>• Tense and grammar basics explained in simple language.</p>
-      <p>• Conversation practice, role plays and introductions.</p>
-      <p>• Confidence building for school, college and interviews.</p>
+  <div class="details-grid">
+
+    <div class="detail-box">
+      <h2>Who Can Join</h2>
+      <ul>
+        <li>School & college students</li>
+        <li>Homemakers</li>
+        <li>Working professionals</li>
+        <li>Beginners to intermediate learners</li>
+      </ul>
     </div>
-    <div class="card">
-      <h3>Course Structure</h3>
-      <p>• Duration: 3 months.</p>
-      <p>• Mode: Online (live classes).</p>
-      <p>• Timing: 1 hour · Alternate days.</p>
-      <p>• Fee: ₹6,000 per month.</p>
+
+    <div class="detail-box">
+      <h2>What You Will Learn</h2>
+      <ul>
+        <li>Basic to advanced grammar</li>
+        <li>Daily conversation practice</li>
+        <li>Vocabulary building</li>
+        <li>Confidence & fluency development</li>
+      </ul>
     </div>
+
+    <div class="detail-box">
+      <h2>Course Features</h2>
+      <ul>
+        <li>Live online sessions</li>
+        <li>Small batch size</li>
+        <li>Regular speaking practice</li>
+        <li>Personalised feedback</li>
+      </ul>
+    </div>
+
   </div>
 
-  <p class="lead" style="margin-top:18px;">For school subject tuition, please see our <a href="classes-fees.html">Classes & Fees</a> or <a href="contact.html">contact us</a> directly.</p>
-  <a href="tel:+917357970676" class="btn-primary">Book a Demo Class</a>
+  <div class="fee-box">
+    <h2>Course Fee</h2>
+    <p><strong>₹6,000 per month</strong></p>
+    <p>Classes on alternate days | 1 hour per session</p>
+  </div>
+
+  <div class="cta">
+    <a href="contact.html">Enroll for Spoken English</a>
+  </div>
+
 </section>
 
 <footer>
-  Academic Link Institute – Empowering Minds · Raja Park, Jaipur · +91 7357 970 676
+  © 2025 Academic Link | Raja Park, Jaipur
 </footer>
 
 </body>
