Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <header>
   <nav>
     <div class="logo">
-      <img src="logo.png" alt="Academic Link">
+      <img src="IMG_20251223_194332.jpg" alt="Academic Link">
     </div>
     <ul>
       <li><a href="index.html">Home</a></li>
